Fix spacing between the UI components

--- a/style.css
+++ b/style.css
@@ -95,11 +95,15 @@ label{
 }
 
 input{
-    margin-top: 10px;
+    margin-top: 3px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
+    font-family: "Montserrat", sans-serif;
 }
 
 button{
-    margin-top: 10px;
+    margin: 10px 0 20px 0;
     font-family: "Montserrat", sans-serif;
     font-weight: 500;
     font-size: 20px;
